After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660469 - opus/celt: fix calculation of filler data size
opus/celt: fix calculation of filler data size
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 0.10.23
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-09-29 13:27 UTC by Vincent Penquerc'h
Modified: 2011-11-07 18:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
opusenc: fix calculation of filler data size (981 bytes, patch)
2011-09-29 13:27 UTC, Vincent Penquerc'h
committed Details | Review
celtenc: fix calculation of filler data size (915 bytes, patch)
2011-09-29 13:27 UTC, Vincent Penquerc'h
none Details | Review

Description Vincent Penquerc'h 2011-09-29 13:27:19 UTC
opus/celt: fix calculation of filler data size
Comment 1 Vincent Penquerc'h 2011-09-29 13:27:21 UTC
Created attachment 197765 [details] [review]
opusenc: fix calculation of filler data size
Comment 2 Vincent Penquerc'h 2011-09-29 13:27:24 UTC
Created attachment 197766 [details] [review]
celtenc: fix calculation of filler data size
Comment 3 Sebastian Dröge (slomo) 2011-10-03 09:29:11 UTC
Is this still valid after the GstAudioEncoder port?
Comment 4 Vincent Penquerc'h 2011-10-05 23:10:49 UTC
The CELT one isn't, the Opus one still is (but will not if opusenc gets ported).
Comment 5 Vincent Penquerc'h 2011-11-07 11:31:20 UTC
Both are still is valid in 0.10.

commit ac95f56d2efa0b57b6cdbc7c395928b21745a976
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Thu Sep 29 14:22:53 2011 +0100

    celtenc: fix calculation of filler data size
    
    https://bugzilla.gnome.org/show_bug.cgi?id=660469

commit 4a4b1f472e71c1d0ed604f1ea612ecacaa34f1a4
Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk>
Date:   Thu Sep 29 14:22:33 2011 +0100

    opusenc: fix calculation of filler data size
    
    https://bugzilla.gnome.org/show_bug.cgi?id=660469