opusenc: fix calculation of filler data size

https://bugzilla.gnome.org/show_bug.cgi?id=660469